// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for aspectRatio: "1:1", weight: "regular", linkDirection: "column" and hasDescription: false 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
h2,h3,h4,h5,h6 {
  margin: 0 !important;
}
.root {
  position: relative;
  overflow: hidden;
  transform: translate3d(0,0,0);
  border-radius: 12px;
  color: #FBFCFF;
  padding-top: 100%;
}
.image-container {
  position: absolute;
  transition: transform var(--p-motion-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  left: 0;
  right: 0;
  display: flex;
  justify-items: start;
  gap: 16px;
  border-radius: 12px;
  flex-direction: column;
  bottom: 0;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
}
.signature {
  position: absolute;
  top: clamp(16px, 1.25vw + 12px, 36px);
  left: clamp(16px, 1.25vw + 12px, 36px);
  right: clamp(16px, 1.25vw + 12px, 36px);
  display: flex;
}
.heading {
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  font-weight: 400;
}
.link-group {
  display: flex;
  width: 100%;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover .image-container {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "3:4", weight: "semi-bold", linkDirection: "row" and hasDescription: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
h2,h3,h4,h5,h6 {
  margin: 0 !important;
}
.root {
  position: relative;
  overflow: hidden;
  transform: translate3d(0,0,0);
  border-radius: 12px;
  color: #FBFCFF;
  padding-top: 133.33%;
}
.image-container {
  position: absolute;
  transition: transform var(--p-motion-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  left: 0;
  right: 0;
  display: flex;
  justify-items: start;
  gap: 16px;
  border-radius: 12px;
  flex-direction: column;
  bottom: 0;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
}
.signature {
  position: absolute;
  top: clamp(16px, 1.25vw + 12px, 36px);
  left: clamp(16px, 1.25vw + 12px, 36px);
  right: clamp(16px, 1.25vw + 12px, 36px);
  display: flex;
}
.heading {
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  font-weight: 600;
}
.description {
  margin: -12px 0 0 ;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
}
.link-group {
  display: flex;
  width: 100%;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover .image-container {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "4:3", weight: "semi-bold", linkDirection: "row" and hasDescription: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
h2,h3,h4,h5,h6 {
  margin: 0 !important;
}
.root {
  position: relative;
  overflow: hidden;
  transform: translate3d(0,0,0);
  border-radius: 12px;
  color: #FBFCFF;
  padding-top: 75%;
}
.image-container {
  position: absolute;
  transition: transform var(--p-motion-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  left: 0;
  right: 0;
  display: flex;
  justify-items: start;
  gap: 16px;
  border-radius: 12px;
  flex-direction: column;
  bottom: 0;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
}
.signature {
  position: absolute;
  top: clamp(16px, 1.25vw + 12px, 36px);
  left: clamp(16px, 1.25vw + 12px, 36px);
  right: clamp(16px, 1.25vw + 12px, 36px);
  display: flex;
}
.heading {
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  font-weight: 600;
}
.description {
  margin: -12px 0 0 ;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
}
.link-group {
  display: flex;
  width: 100%;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover .image-container {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "9:16", weight: "semi-bold", linkDirection: "row" and hasDescription: false 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
h2,h3,h4,h5,h6 {
  margin: 0 !important;
}
.root {
  position: relative;
  overflow: hidden;
  transform: translate3d(0,0,0);
  border-radius: 12px;
  color: #FBFCFF;
  padding-top: 177.75%;
}
.image-container {
  position: absolute;
  transition: transform var(--p-motion-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  left: 0;
  right: 0;
  display: flex;
  justify-items: start;
  gap: 16px;
  border-radius: 12px;
  flex-direction: column;
  bottom: 0;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
}
.signature {
  position: absolute;
  top: clamp(16px, 1.25vw + 12px, 36px);
  left: clamp(16px, 1.25vw + 12px, 36px);
  right: clamp(16px, 1.25vw + 12px, 36px);
  display: flex;
}
.heading {
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  font-weight: 600;
}
.link-group {
  display: flex;
  width: 100%;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: row wrap;
  align-items: center;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover .image-container {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: "16:9", weight: "regular", linkDirection: "column" and hasDescription: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
h2,h3,h4,h5,h6 {
  margin: 0 !important;
}
.root {
  position: relative;
  overflow: hidden;
  transform: translate3d(0,0,0);
  border-radius: 12px;
  color: #FBFCFF;
  padding-top: 56.25%;
}
.image-container {
  position: absolute;
  transition: transform var(--p-motion-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  left: 0;
  right: 0;
  display: flex;
  justify-items: start;
  gap: 16px;
  border-radius: 12px;
  flex-direction: column;
  bottom: 0;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
}
.signature {
  position: absolute;
  top: clamp(16px, 1.25vw + 12px, 36px);
  left: clamp(16px, 1.25vw + 12px, 36px);
  right: clamp(16px, 1.25vw + 12px, 36px);
  display: flex;
}
.heading {
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  font-weight: 400;
}
.description {
  margin: -12px 0 0 ;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
}
.link-group {
  display: flex;
  width: 100%;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover .image-container {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: {"base":"1:1","xs":"4:3","s":"3:4","m":"16:9","l":"9:16","xl":"1:1"}, weight: {"base":"semi-bold","xs":"regular","s":"semi-bold","m":"regular","l":"semi-bold","xl":"regular"}, linkDirection: {"base":"column","xs":"row","s":"column","m":"row","l":"column","xl":"row"} and hasDescription: true 1`] = `
":host {
  display: block;
  hyphens: auto;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
h2,h3,h4,h5,h6 {
  margin: 0 !important;
}
.root {
  position: relative;
  overflow: hidden;
  transform: translate3d(0,0,0);
  border-radius: 12px;
  color: #FBFCFF;
  padding-top: 100%;
}
.image-container {
  position: absolute;
  transition: transform var(--p-motion-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  left: 0;
  right: 0;
  display: flex;
  justify-items: start;
  gap: 16px;
  border-radius: 12px;
  flex-direction: column;
  bottom: 0;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
}
.signature {
  position: absolute;
  top: clamp(16px, 1.25vw + 12px, 36px);
  left: clamp(16px, 1.25vw + 12px, 36px);
  right: clamp(16px, 1.25vw + 12px, 36px);
  display: flex;
}
.heading {
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
  font-weight: 600;
}
.description {
  margin: -12px 0 0 ;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: inherit;
}
.link-group {
  display: flex;
  width: 100%;
  gap: clamp(8px, 0.5vw + 6px, 16px);
  flex-flow: column nowrap;
  align-items: stretch;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
@media(min-width:480px) {
  .root {
    padding-top: 75%;
  }
  .heading {
    font-weight: 400;
  }
  .link-group {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media(min-width:760px) {
  .root {
    padding-top: 133.33%;
  }
  .heading {
    font-weight: 600;
  }
  .link-group {
    flex-flow: column nowrap;
    align-items: stretch;
  }
}

@media(min-width:1000px) {
  .root {
    padding-top: 56.25%;
  }
  .heading {
    font-weight: 400;
  }
  .link-group {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media(min-width:1300px) {
  .root {
    padding-top: 177.75%;
  }
  .heading {
    font-weight: 600;
  }
  .link-group {
    flex-flow: column nowrap;
    align-items: stretch;
  }
}

@media(min-width:1760px) {
  .root {
    padding-top: 100%;
  }
  .heading {
    font-weight: 400;
  }
  .link-group {
    flex-flow: row wrap;
    align-items: center;
  }
}

@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover .image-container {
    transform: scale3d(1.05,1.05,1.05);
  }
}
"
`;
